重命名animal文件夹并让玩家在缓慢效果下在水中慢慢下沉